--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <!-- Its the header and menu bar -->
 
         <header id="myHeader">
-            <div class="log"><a href="#"><img src="images/My logo.png" alt="my logo" width="4%"></a></div>
+            <div class="log"><a href="/index.html"><img src="images/My logo.png" alt="my logo" width="4%"></a></div>
             <div class="menu">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="#">Intro</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Blog's</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a class="active" href="/index.html">Home</a></li>
+                    <li><a href="/intro.html">Intro</a></li>
+                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="/blogs.html">Blog's</a></li>
+                    <li><a href="/about.html">About</a></li>
                 </ul>
             </div>
         </header>
@@ -60,10 +60,10 @@
                     </div>
                 </div>
                 <div class="icons">
-                    <a href="#" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-                    <a href="#" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
-                    <a href="mailto:baignasirullah1@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-xl"></i></a>
-                    <a href="#" target="_blank"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
+                    <a href="https://www.linkedin.com/in/nasir-ullah-baig-32a34b1b7/" aria-label="Linkedin" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100005022286537" aria-label="Facebook" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-facebook fa-xl"></i></a>
+                    <a href="mailto:baignasirullah1@gmail.com" aria-label="Linkedin" rel="noopener norefererrer" target="_blank"><i class="fa-solid fa-envelope fa-xl"></i></a>
+                    <a href="https://www.instagram.com/nasirullah.baig/" aria-label="Instagram" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-square-instagram fa-xl"></i></a>
                 </div>
             </div>
             <div class="sub-main">
@@ -75,7 +75,7 @@
                         Being a computer student I have command in HTML, CSS and Java-Script, which makes me a good front-end developer. I am here to serve you with my skills. Hope you will get benefit out of my skills"</p>
                     <div class="buttons">
                         <a href="images/My Resume.pdf" target="_blank"><button>Download CV</button></a>
-                        <a href="#"><button>Contact Me</button></a>
+                        <a href="/contact.html"><button>Contact Me</button></a>
     
                     </div>
                 </div>
@@ -91,7 +91,7 @@
     <div class="container-2">
          <div class="content">
                 <div class="blogs">
-                    <a href="#"><h1><i class="fa-solid fa-blog"></i>Blog's</h1></a>
+                    <a href="/blogs.html"><h1><i class="fa-solid fa-blog"></i>Blog's</h1></a>
                 </div>
                 <div class="boxes">
                     <div class="blog-box">
@@ -114,7 +114,7 @@
     <div class="container-3">
         <div class="content">
                <div class="blogs">
-                   <a href="#"><h1><i class="fa-solid fa-laptop-file"></i>Services</h1></a>
+                   <a href="/services.html"><h1><i class="fa-solid fa-laptop-file"></i>Services</h1></a>
                </div>
                <div class="boxes">
                    <div class="blog-box">
@@ -137,16 +137,16 @@
    <!-- Footer starts from here -->
    <footer>
         <div class="about">
-            <a href="#"><h4><i class="fa-solid fa-circle-user"></i>About</h4></a>
+            <a href="/about.html"><h4><i class="fa-solid fa-circle-user"></i>About</h4></a>
         </div>
         <div class="about-content">
-            <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque tenetur perspiciatis illum, animi numquam est atque totam neque et alias! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non perspiciatis id deserunt tempora! Nostrum laborum, rerum dolores a ut possimus?</p></div>
+            <div><p>I am a computer science student. I have learned different programming languages like Java, C++, and python. Now I have command on HTML, CSS, and javascript. I am here to provide my services regarding any programming language that I have mentioned.</p></div>
             <div class="icon">
-                <a href=""><i class="fa-brands fa-twitter fa-2xl"></i></a>
-                <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-                <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                <a href=""><i class="fa-brands fa-github fa-2xl"></i></a>
-                <a href=""><i class="fa-brands fa-square-instagram fa-2xl"></i></a>
+                <a href="https://twitter.com/NasirUllahBaig2" aria-label="Twitter" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                <a href="https://www.linkedin.com/in/nasir-ullah-baig-32a34b1b7/" aria-label="Linkedin" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100005022286537" aria-label="Facebook" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href="https://github.com/Nasirullahbaig1" aria-label="github" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
+                <a href="https://www.instagram.com/nasirullah.baig/" aria-label="Instagram" rel="noopener norefererrer" target="_blank"><i class="fa-brands fa-square-instagram fa-2xl"></i></a>
             </div>
         </div>
         <p id="copyright">&#169 Nasir Ullah Baig || 2022</p>
