--- a/blogs.html
+++ b/blogs.html
@@ -28,6 +28,41 @@
                 </ul>
             </div>
         </header>
+        <div class="main-blog">
+            <div id="blog-1" class="portion">
+                <div class="picture">
+                    <img src="/images/blog-img.jpg" alt="blog image">
+                </div>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, necessitatibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio modi dolore, illo ex id porro expedita odio veritatis inventore at blanditiis ullam. Repellendus hic excepturi aliquam voluptatem, incidunt cupiditate architecto.</p>
+
+                    <div class="icons-blog">
+                        <i class="fa-solid fa-heart fa-xl"></i>
+                        <i class="fa-solid fa-thumbs-up fa-xl"></i>
+                        <i class="fa-solid fa-thumbs-down fa-xl"></i>
+                        <i class="fa-solid fa-share fa-xl"></i>
+                    </div>
+                </div>
+            </div>
+            <div id="blog-1" class="portion">
+                <div class="picture">
+                    <img src="/images/blog-img1.jpg" alt="blog image">
+                </div>
+                <div class="description">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, necessitatibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio modi dolore, illo ex id porro expedita odio veritatis inventore at blanditiis ullam. Repellendus hic excepturi aliquam voluptatem, incidunt cupiditate architecto.</p>
+
+                    <div class="icons-blog">
+                        <i class="fa-solid fa-heart fa-xl"></i>
+                        <i class="fa-solid fa-thumbs-up fa-xl"></i>
+                        <i class="fa-solid fa-thumbs-down fa-xl"></i>
+                        <i class="fa-solid fa-share fa-xl"></i>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
     </div>
 
 
