--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="log"><a href="/index.html"><img src="images/My logo.png" alt="my logo" width="4%"></a></div>
             <div class="menu">
                 <ul>
-                    <li><a class="active" href="/index.html">Home</a></li>
-                    <li><a href="/intro.html">Intro</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/blogs.html">Blog's</a></li>
-                    <li><a href="/about.html">About</a></li>
+                    <li><a class="active" href="/index.html">HOME</a></li>
+                    <li><a href="/intro.html">INTRODUCTION</a></li>
+                    <li><a href="/services.html">EDUCATION</a></li>
+                    <li><a href="/blogs.html">EXPERIENCE</a></li>
+                    <li><a href="/about.html">PROJECT</a></li>
                 </ul>
             </div>
         </header>
